--- a/docs/pages/cli.mdx
+++ b/docs/pages/cli.mdx
@@ -5,22 +5,24 @@ xSuite utility provides the following commands:
 - `xsuite install-rust` - installs Rust with rustup
 - `xsuite uninstall-rust` - uninstalls Rust with rustup
 - `xsuite new` - creates a new blank contract; currently it has the following options:
-    - `--dir <DIR>` - specify the contract dir
-    - `--starter <STARTER>` - specify the contract to start from
-    - `--no-install` - skip package installation
-    - `--no-git` - skip git initialization
+  - `--dir <DIR>` - specify the contract dir
+  - `--starter <STARTER>` - specify the contract to start from
+  - `--no-install` - skip package installation
+  - `--no-git` - skip git initialization
 - `xsuite build` - builds a contract; currently it has the following options:
-    - `-r, --recursive` - builds all contracts under the directory
+  - `-r, --recursive` - builds all contracts under the directory
+- `xsuite build-reproducible` - builds a reproducible contract
+  - '--image-tag <IMAGE_TAG>' - specify the tag of the image, that is used to build the contract (e. g. v6.1.0)
 - `xsuite test-rust` - runs contract Rust tests
 - `xsuite test-scen` - runs contract scenarios tests
 - `xsuite new-wallet` - creates a new wallet file; currently it has the following options:
-    - `--wallet <WALLET_PATH>` - specify the wallet path
-    - `--password <PASSWORD>` - specify the wallet password
-    - `--from-pem <PEM_PATH>` - specify the PEM path
-    - `--from-pem <WALLET_PATH>` - specify the old wallet path
-    - `--shard <SHARD>` - specify the shard the wallet is created for
+  - `--wallet <WALLET_PATH>` - specify the wallet path
+  - `--password <PASSWORD>` - specify the wallet password
+  - `--from-pem <PEM_PATH>` - specify the PEM path
+  - `--from-pem <WALLET_PATH>` - specify the old wallet path
+  - `--shard <SHARD>` - specify the shard the wallet is created for
 - `xsuite request-xegld` - requests XEGLD tokens for a wallet; currently it has the following options:
-    - `--wallet <WALLET_PATH>` - specify the wallet path
-    - `--password <PASSWORD>` - specify the wallet password
+  - `--wallet <WALLET_PATH>` - specify the wallet path
+  - `--password <PASSWORD>` - specify the wallet password
 
 To learn more about the commands you can run `xsuite --help` for a general help or for example `xsuite new --help` for a help for a specific command.
